<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_car"
        android:icon="@drawable/ic_shopping_cart_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_mine"
        android:icon="@drawable/ic_perm_identity_black_24dp"
        android:title="@string/title_mine" />

    <item
        android:id="@+id/navigation_send"
        android:icon="@drawable/ic_motorcycle_black_24dp"
        android:title="@string/title_send" />
</menu>
